--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,10 @@ email-validator = "^1.1.2"
 python-multipart = "^0.0.5"
 alembic = "^1.6.5"
 idna = "^3.7"
+black = "^24.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
-black = {extras = ["d"], version = "^21.7b0"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
